tests/miz/pass/types/pass_type_elaboration_local_mode_reserved_variable_equality_001.miz
definition
  mode LocalModeFormulaDef: LocalModeFormula is set;
end;

reserve x for LocalModeFormula;
theorem LocalModeReservedVariableEqualityPayloadBoundary: x = x;
