tests/miz/fail/types/fail_type_elaboration_bracket_mode_argument_gap_001.miz
definition
  mode FamilyDef: Family [a, b] is set;
end;

reserve f for Family[set];
